--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     
-    <title>Document</title>
+    <title>conversor de moedas Diogo Jardim </title>
 </head>
 <body>
     <img src="./assest/logo.gif" alt="logo-image" class="image-mão">
